--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "whatwg-fetch": "^3.6.20"
   }
 }
